--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
+:root {
+  font-family: "Bubblegum Sans";
+}
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #063df5;
+}
+
+button:disabled {
+  background-color: white;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100vh;
+}
+
+.question {
+  display: flex;
+  flex-direction: column;
+}
+
+.questionTitle {
+  letter-spacing: 3px;
+  font-size: 3rem;
   color: white;
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.answers {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.answer {
+  cursor: pointer;
+  padding: 1rem;
+  margin-top: 1.2rem;
+  border-radius: 25px;
+  font-size: 1.8rem;
+  border: 5px solid black;
+}
+
+.green {
+  color: #90ee90;
+}
+
+.red {
+  color: red;
+}
+
+button.correct:disabled {
+  background-color: #90ee90;
+  color: black;
+}
+
+button.wrong:disabled {
+  background-color: red;
+  color: white;
 }
